<resources>
    <string name="app_name" translatable="false">NTS Alarm Clock</string>
    <string name="loading_settings">Loading settings…</string>
    <string name="time">TIME</string>
    <string name="alarm_time">Alarm time</string>
    <string name="volume">VOLUME</string>
    <string name="days">DAYS</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">We</string>
    <string name="thursday_short">Th</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">Su</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="day_selected">Selected</string>
    <string name="day_not_selected">Not selected</string>
    <string name="cancel_alarm">CANCEL ALARM</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="progressive_volume">PROGRESSIVE VOLUME</string>
    <string name="progressive_volume_description">The alarm starts softly and fades to the set volume</string>
    <string name="notifications_permission_required">NOTIFICATIONS PERMISSION REQUIRED</string>
    <string name="this_app_needs_notification_permission_to_work">This app needs notification permission to be able to run the alarm</string>
    <string name="allow_notifications">ALLOW NOTIFICATIONS</string>
    <string name="open_settings">OPEN SETTINGS</string>
    <string name="alarm_ringing">TIME TO TUNE IN!</string>
    <string name="notification_alarm_ringing">Alarm ringing</string>
    <string name="notification_channel_name">Alarm</string>
    <string name="notification_channel_description">Notifications used when the alarm is ringing</string>
    <string name="offline_fallback_music_message">This backup music is playing because NTS cannot be played. Maybe your internet is disabled?</string>
    <string name="currently_playing">Currently playing: %1$s</string>
    <string name="overlay_permission_required">OVERLAY PERMISSION REQUIRED</string>
    <string name="overlay_permission_explanation">This app needs the overlay permission to show the alarm on the screen</string>
    <string name="allow_overlay">ALLOW OVERLAY</string>
    <string name="play_stream_preview">Play stream preview</string>
    <string name="pause_stream_preview">Pause stream preview</string>
    <string name="alarm_volume">Alarm volume</string>
    <string name="preview_alarm_scheduled_in">This alarm is scheduled in 10 hours and 12 minutes</string>
    <string name="alarm_disabled">Alarm is disabled</string>
    <string name="no_alarm_scheduled">No alarm scheduled</string>
    <string name="alarm_scheduled_in">This alarm is scheduled in %1$s</string>
    <string name="alarm_scheduled_in_less_than_minute">This alarm is scheduled in less than a minute</string>
    <string name="duration_separator">,</string>
    <string name="duration_final_separator">and</string>
    <plurals name="duration_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="duration_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="duration_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="stop_alarm_button">STOP</string>
</resources>
